# cf-check-dns

./: .gitignore  .pre-commit-config.yaml  README.md  cf-dns.envfile  pyproject.toml
cf_check_dns/: app.py
