[tool.poetry]
name = "cf-check-dns"
version = "0.5.0"
description = ""
authors = ["Jon Mark Allen <ubahmapk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = ">=8.1.7"
httpx = ">=0.27.0"
loguru = "^0.7.2"

[tool.poetry.scripts]
cf-check-dns = "cf_check_dns.app:main"

[tool.poetry.group.dev.dependencies]
black = ">=24.4.0"
vermin = ">=1.6.0"
isort = ">=5.13.2"
ruff = ">=0.6.9"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = [
    "E", # Pycodestyle errors
    "F", # Pyflakes
    "W", # Pywicked
    "B", # Flake8-bugbear
    "C4", # Flake8-comprehensions
    "I", # Isort
    "N", # Mcabe nested complexity
    "PGH", # Flake8-pygments
    "PTH", # Flake8-pytest-helper
    "Q", # Flake8-quotes
    "RET", # Flake8-return
    "RUF", # Ruff-specific rules
    "SIM", # Flake8-simplify
    "UP", # Flake8-pyupgrade
    "YTT", # Flake8-2020
]
lint.ignore = [
    "RET501",
    "F541"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
