[project]
name = "cf-check-dns"
version = "0.5.1"
description = "A Python utility to check DNS records for a domain hosted in Cloudflare"
readme = "README.md"
authors = [
    { name = "Jon Mark Allen", email = "ubahmapk@proton.me" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydantic[email]>=2.10.4",
    "pydantic-settings>=2.7.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "ipython>=8.31.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.396",
    "ruff>=0.9.9",
    "vermin>=1.6.0",
]

[project.scripts]
cf-check-dns = "cf_check_dns.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
